{"message":"Update file: collection.yml","userId":"458","fileName":"collection.yml"}

--- a/_information-for-public/collection.yml
+++ b/_information-for-public/collection.yml
@@ -5,5 +5,5 @@ collections:
       - about-the-licensing-officer.md
       - as-an-insolvency-practitioner.md
       - register-of-insolvency-practitioners.md
-      - Licensing actions taken.md
+      - Licensing Actions Taken.md
       - filing-a-complaint-against-an-insolvency-practitioner.md
