--- a/_information-for-public/collection.yml
+++ b/_information-for-public/collection.yml
@@ -2,6 +2,7 @@ collections:
   information-for-public:
     output: true
     order:
+      - Licensing Actions Taken/2024.md
       - Licensing Actions Taken/.keep
       - Licensing Actions Taken.md
       - about-the-licensing-officer.md
