--- a/_information-for-public/collection.yml
+++ b/_information-for-public/collection.yml
@@ -2,6 +2,7 @@ collections:
   information-for-public:
     output: true
     order:
+      - List of Former Licensed Insolvency Practitioners.md
       - about-the-licensing-officer.md
       - as-an-insolvency-practitioner.md
       - register-of-insolvency-practitioners.md
