{"message":"Update file: collection.yml","userId":"458","fileName":"collection.yml"}

--- a/_information-for-public/collection.yml
+++ b/_information-for-public/collection.yml
@@ -6,5 +6,5 @@ collections:
       - as-an-insolvency-practitioner.md
       - register-of-insolvency-practitioners.md
       - List of Former Licensed Insolvency Practitioners.md
-      - Licensing Actions Taken.md
+      - Licensing Action Taken.md
       - filing-a-complaint-against-an-insolvency-practitioner.md
