--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,6 +1,6 @@
 show_reach: true
 copyright_agency: Open Government Products
-faq: https://console-flex-api.ap.sabio.cloud/faq/index.aspx?p=64759355
+faq: https://console.apac.sabio.cloud/FAQ/index.aspx?p=64759355
 feedback: https://eservices.mlaw.gov.sg/enquiry/
 privacy: /privacy/
 terms_of_use: /terms-of-use/
