{"message":"Update file: navigation.yml","userId":"458","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,7 +20,7 @@ links:
   - title: Information For Insolvency Practitioners
     collection: information-for-insolvency-practitioners
   - title: FAQs
-    url: https://console-flex-api.ap.sabio.cloud/faq/index.aspx?p=64759355
+    url: https://console.apac.sabio.cloud/FAQ/index.aspx?p=64759355
   - title: News
     url: https://www.mlaw.gov.sg/news/
     external: true
