{"message":"Update file: navigation.yml","userId":"28446","fileName":"navigation.yml"}

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ links:
       - title: What We Do
         url: https://www.mlaw.gov.sg/about-us/what-we-do/
       - title: Contact Us
-        url: https://www.mlaw.gov.sg/about-us/contact-us/
+        url: https://www.go.gov.sg/contactminlaw
   - title: Information For Public
     collection: information-for-public
   - title: Information For Insolvency Practitioners
