--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,7 +20,7 @@ links:
   - title: Information For Insolvency Practitioners
     collection: information-for-insolvency-practitioners
   - title: FAQs
-    url: https://console.apac.sabio.cloud/FAQ/index.aspx?p=64759355
+    url: https://ask.gov.sg/mlaw
   - title: News
     url: https://www.mlaw.gov.sg/news/
     external: true
